--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "express-angular",
-    "version": "0.0.2",
-    "private": true,
-    "dependencies":
-    {
-        "express": "3.x",
-        "ejs": ">= 0.0.1",
-        "nconf": ">= 0.5.1",
-        "everyauth": ">= 0.3.0"
-    }
+  "name": "express-angular",
+  "version": "0.0.2",
+  "private": true,
+  "dependencies": {
+    "ejs": ">= 0.0.1",
+    "everyauth": ">= 0.3.0",
+    "express": "3.x",
+    "hiw-api": "^5.2.0",
+    "nconf": ">= 0.5.1"
+  }
 }
