--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.0.2",
   "private": true,
   "dependencies": {
+    "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
+    "angular-aria": "^1.4.7",
+    "angular-material": "^0.11.2",
     "ejs": ">= 0.0.1",
     "everyauth": ">= 0.3.0",
     "express": "3.x",
